--- a/meeting-minutes/mm/20230208.md
+++ b/meeting-minutes/mm/20230208.md
@@ -24,6 +24,7 @@ Work for Sprint 1 will be assigned as follows:
 
 ## Decisions
 - The tasks will be distributed as mentioned above.
+- Scrums shall be done two times a week.
 
 ## Actions
 - GitLab issues (that have already been created) have been assigned with appropriate priorities.
