--- a/release-notes/1.0.0.md
+++ b/release-notes/1.0.0.md
@@ -1,23 +1,22 @@
 # Team 112's Notes Application (Release 1.0.0)
-> _Date: February 16, 2023_
+> _Date: February 17, 2023_
 
-## What's New
+## 🚀 What's New
 
-### From a Client's Perspective
+### 👨🏻‍💼 From a Client's Perspective
 With the new release of Team 112’s notes application, a user can:
 - Create a new note through the command line
 - Type some text in the basic GUI to be saved
-- Use the toolbar/shortcuts to quit/save the file
+- Use the shortcuts to quit/save the file
 - Edit an existing file from the command line
-- Delete an existing file from the command line
+- Delete an existing file
 
 
-### From a Developer's Perspective
-- Added unit tests to test the error bounds and edge cases of the application using JUnit 5 (specifications as per the course requirements)
-- Added descriptive JDocs comments to significant code for easier documentation and code comprehension
+### 👩🏻‍💻 From a Developer's Perspective
+- Added descriptive JavaDocs comments to significant code for easier documentation and code comprehension
 - Followed the MVC (Model-View-Controller) architectural pattern for developing the notes application
 - Created a GitLab events notifier into the team’s discord server to ping members for any changes caused by members in the repository
 
-## Bug Fixes
+## 🐞 Bug Fixes
 None.
 
