--- a/meeting-minutes/ds/20230322.md
+++ b/meeting-minutes/ds/20230322.md
@@ -1,25 +1,28 @@
 # CS 346: Daily Standup
 
 |    Date    | Team # |
-| :--------: | :----: |
-| 2023-01-01 |  112   |
+|:----------:| :----: |
+| 2023-03-22 |  112   |
 
 ## Questions
 
 _Enter comments below. If a team member is absent, fill in their name, and put a line through the answer section_
 
 | Name            | What have you completed since last meeting? | What are you going to complete today? | What obstacles are in your way? |
-| --------------- |-------------------------------------------|---------------------------------------| ------------------------------- |
-| Abhay Menon     | #44, #29, #16                             | Helping with #13                      | -                               |
-| Inseo Kim       |                                           | -                                     | -                               |
-| Hoang Dang      | #7, #15                                   | #13                                   | -                               |
-| Guransh Khurana | -                                         | -                                     | -                               |
-| Anshul Ruhil    | -                                         | -                                     | -                               |
+| --------------- |---------------------------------------------|---------------------------------------| ------------------------------- |
+| Abhay Menon     | #44, #29, #16                               | Helping with #13                      | -                               |
+| Inseo Kim       | #9, #11                                     | #46                                   | -                               |
+| Hoang Dang      | #7, #15                                     | #13                                   | -                               |
+| Guransh Khurana | -                                           | #25                                   | -                               |
+| Anshul Ruhil    | -                                           | #24                                   | -                               |
 
 ## Outstanding
 
 _Do we need help with anything?_
 
+No
 ## Decisions
 
 _Is there anything else we should capture from this meeting?_
+
+No
